--- a/public/index.html
+++ b/public/index.html
@@ -1,84 +1,28 @@
 <html ng-app="roastLogApp">
 <head>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular-route.min.js"></script>
-
-  <script src="./vendors/d3.js"></script>
-  <script src="./vendors/nv.d3.js"></script>
-  <script src="./vendors/angularjs-nvd3-directives.js"></script>
-
-    <script src="./js/services/CRUDservice.js"></script>
-	<script src="./js/controllers/controllers.js"></script>
-    <script src="./js/app.js"></script>
+  
 
   <link rel="stylesheet" href="./css/screen.css">
   
   <link rel="stylesheet" href="./vendors/nv.d3.css">
+
+  <link rel="stylesheet" href="./vendors/smoothness/jquery-ui.css">
   
 </head>
 <body ng-controller="roastLogAppCtrl as mainCtrl">
 
 	
 	<!-- FORM TO LOG A NEW ROAST -->
-	<div class="new-roast">
-		<form name="form" novalidate>
-			<div>
 
-				<!-- BIND THIS VALUE TO mainCtrl.newRoast.text IN ANGULAR -->
-				<p><input type="text" name="bean" placeholder="Bean" ng-model="mainCtrl.newRoast.bean"></p>
-
-				<p><input type="date" name="roast_date" placeholder="Roast Date" ng-model="mainCtrl.newRoast.roast_date"></p>
-				
-				<p><input type="text" name="roaster_program" placeholder="Roaster Program" ng-model="mainCtrl.newRoast.roaster_program"></p>
-
-				<p>Roaster Warm: <input type="checkbox" name="roaster_warm" value="warm" ng-model="mainCtrl.newRoast.roaster_warm"></p>
-
-				<p>Yellow: <input type="text" size="8" name="time_to_yellow" ng-model="mainCtrl.newRoast.time_to_yellow">
-				<input type="text" name="temp_at_yellow" placeholder="temp" ng-model="mainCtrl.newRoast.temp_at_yellow"></p>
-
-				<p>Brown: <input type="text" size="8" name="time_to_brown" ng-model="mainCtrl.newRoast.time_to_brown">
-				<input type="text" name="temp_at_brown" placeholder="temp" ng-model="mainCtrl.newRoast.temp_at_brown"></p>
-
-				<p>1st Crack Begin: <input type="text" size="8" name="time_to_first_crack_start" ng-model="mainCtrl.newRoast.time_to_first_crack_start">
-				<input type="text" name="temp_at_first_crack_start" placeholder="temp" ng-model="mainCtrl.newRoast.temp_at_first_crack_start"></p>
-
-				<p>1st Crack End: <input type="text" size="8" name="time_to_first_crack_end" ng-model="mainCtrl.newRoast.time_to_first_crack_end">
-				<input type="text" name="temp_at_first_crack_end" placeholder="temp" ng-model="mainCtrl.newRoast.temp_at_first_crack_end"></p>
-
-				<p>2nd Crack Begin: <input type="text" size="8" name="time_to_second_crack_start" ng-model="mainCtrl.newRoast.time_to_second_crack_start">
-				<input type="text" name="temp_at_second_crack_start" placeholder="temp" ng-model="mainCtrl.newRoast.temp_at_second_crack_start"></p>
-
-				<p>2nd Crack End: <input type="text" size="8" name="time_to_second_crack_end" ng-model="mainCtrl.newRoast.time_to_second_crack_end">
-				<input type="text" name="temp_at_second_crack_end" placeholder="temp" ng-model="mainCtrl.newRoast.temp_at_second_crack_end"></p>
-
-				<p>Drop: <input type="text" size="8" name="time_at_drop" ng-model="mainCtrl.newRoast.time_at_drop">
-				<input type="text" name="temp_at_drop" placeholder="temp" ng-model="mainCtrl.newRoast.temp_at_drop"></p>
-
-				<p><textarea rows="4" cols="50" name="roast_notes" placeholder="Roast Notes" ng-model="mainCtrl.newRoast.roast_notes"></textarea></p>
-
-				<p><textarea rows="4" cols="50" name="taste_notes" placeholder="Taste Notes" ng-model="mainCtrl.newRoast.taste_notes"></textarea></p>
-
-				<div id="temp_curve_inputs">
-				<ul>
-					<li><input type="text" size="2" name="0" placeholder="0" ng-model="mainCtrl.newRoast.temp_curve[0]"></li>
-					<li><input type="text" size="2" name="1" placeholder="1" ng-model="mainCtrl.newRoast.temp_curve[1]"></li>
-					<li><input type="text" size="2" name="2" placeholder="2" ng-model="mainCtrl.newRoast.temp_curve[2]"></li>
-					<li><input type="text" size="2" name="3" placeholder="3" ng-model="mainCtrl.newRoast.temp_curve[3]"></li>
-					<li><input type="text" size="2" name="4" placeholder="4" ng-model="mainCtrl.newRoast.temp_curve[4]"></li>
-					<li><input type="text" size="2" name="5" placeholder="5" ng-model="mainCtrl.newRoast.temp_curve[5]"></li>
-					<li><input type="text" size="2" name="6" placeholder="6" ng-model="mainCtrl.newRoast.temp_curve[6]"></li>
-				</ul>
-				</div>
-
-
-
+<!-- 	<div ng-view></div>
+ -->
+	<div class="overlay">
+		<div class="test-button-container">
+			<div class="test-button">
+				<div class="test-button-text">TEST</div>
 			</div>
-
-			<!-- addRoast() ADDS THE NEW ROAST -->
-			<p><button type="submit" class="btn btn-primary btn-lg" ng-click="mainCtrl.addRoast()">ADD ROAST</button></p>
-		</form>
+		</div>
 	</div>
-
 
 	<!-- SHOW ROASTS -->
 	<div class="roast-list" ng-repeat="roast in mainCtrl.roasts">
@@ -101,6 +45,14 @@
 		</div>
 	</div>	
 
+	<h4><a href="#" ng-click="mainCtrl.show = !mainCtrl.show">toggle add tab</a></h4>
+	
+	<div class="new-roast-container" ng-show="mainCtrl.show">
+		<div ng-include="'views/add_roast.html'"></div>
+	</div>
+
+
+	
 	<!-- {{mainCtrl.whatever}}</br>
 	{{mainCtrl.roasts}} -->
 
@@ -117,8 +69,24 @@
 	    </nvd3-line-chart>
 	    and something
 	</div> -->
+	<script src="./vendors/angular-file-upload-html5-shim.js"></script> 
+	<script src="./vendors/jquery.min.js"></script>
+	<script src="./vendors/jquery-ui.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular-route.min.js"></script>
+	<script src="./vendors/angular-file-upload.js"></script>
+	<script src="./js/ngCoreExt/angular-animate.min.js"></script>
+	<script src="./vendors/date.js"></script>
 
-	<!-- <div ng-view></div> -->
+	<script src=""></script>
+	
+	<script src="./vendors/d3.js"></script>
+	<script src="./vendors/nv.d3.js"></script>
+	<script src="./vendors/angularjs-nvd3-directives.js"></script>
 
+	<script src="./js/services/CRUDservice.js"></script>
+	<script src="./js/directives/directives.js"></script>
+	<script src="./js/controllers/controllers.js"></script>
+	<script src="./js/app.js"></script>
 </body>
 </html>
