--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
   
 
   <link rel="stylesheet" href="./css/screen.css">
-  
-  <link rel="stylesheet" href="./vendors/nv.d3.css">
 
-  <link rel="stylesheet" href="./vendors/smoothness/jquery-ui.css">
+  <link rel="stylesheet" href="./vendor/nvd3/nv.d3.css">
+  
+  <!-- <link rel="stylesheet" href="./vendors/nv.d3.css"> -->
+
+  <link rel="stylesheet" href="./vendor/jquery-ui/themes/smoothness/jquery-ui.css">
 
   <script src="//use.typekit.net/qbo3cja.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
@@ -81,21 +83,20 @@
 	    </nvd3-line-chart>
 	    and something
 	</div> -->
-	<script src="livereload.js"></script>
-	<script src="./vendors/angular-file-upload-html5-shim.js"></script> 
-	<script src="./vendors/jquery.min.js"></script>
-	<script src="./vendors/jquery-ui.min.js"></script>
+	<script src="./vendor/livereload-js/dist/livereload.js"></script>
+	<script src="./vendor/ng-file-upload/angular-file-upload-shim.js"></script> 
+	<script src="./vendor/jquery/dist/jquery.min.js"></script>
+	<script src="./vendor/jquery-ui/jquery-ui.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular-route.min.js"></script>
-	<script src="./vendors/angular-file-upload.js"></script>
+	<script src="./vendor/ng-file-upload/angular-file-upload.js"></script>
 	<script src="./js/ngCoreExt/angular-animate.min.js"></script>
-	<script src="./vendors/date.js"></script>
+	<script src="./vendor/angular-ui-date/src/date.js"></script>
 
-	<script src=""></script>
 	
-	<script src="./vendors/d3.js"></script>
-	<script src="./vendors/nv.d3.js"></script>
-	<script src="./vendors/angularjs-nvd3-directives.js"></script>
+	<script src="./vendor/d3/d3.js"></script>
+	<script src="./vendor/nvd3/nv.d3.js"></script>
+	<script src="./vendor/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
 
 	<script src="./js/services/CRUDservice.js"></script>
 	<script src="./js/directives/directives.js"></script>
