--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 	    </nvd3-line-chart>
 	    and something
 	</div> -->
-	<script src="./vendor/livereload-js/dist/livereload.js"></script>
+	<!-- <script src="./vendor/livereload-js/dist/livereload.js"></script> -->
 	<script src="./vendor/ng-file-upload/angular-file-upload-shim.js"></script> 
 	<script src="./vendor/jquery/dist/jquery.min.js"></script>
 	<script src="./vendor/jquery-ui/jquery-ui.min.js"></script>
